2007-09-17  Ben Motmans <ben.motmans@gmail.com> 

	

2007-09-16  Ben Motmans <ben.motmans@gmail.com> 

	* Codons/DbFactoryCodon.cs: log errors
	* Codons/CapabilityFlagsCodon.cs: Read overload is no longer needed, this is
	  done in the CapabilitiesUtility
	* Capabilities/CapabilitiesUtility.cs: register capability flags on load and
	  correctly parse the flags
	* AbstractDbFactory.cs: small bugfix in SetCapabilities method
	* MonoDevelop.Database.Sql.addin.xml: small changes in the extension points
	* Makefile.am: link to the correct Mono.Addins dll

2007-09-07  Ben Motmans <ben.motmans@gmail.com> 

	* MetaData, MetaData/ViewMetaData.cs, MetaData/DataTypeMetaData.cs,
	  MetaData/UniqueConstraintMetaData.cs, MetaData/UserMetaData.cs,
	  MetaData/ConnectionSettingsMetaData.cs, MetaData/ParameterMetaData.cs,
	  MetaData/CheckConstraintMetaData.cs, MetaData/TableMetaData.cs,
	  MetaData/ProcedureMetaData.cs, MetaData/ColumnMetaData.cs,
	  MetaData/MetaDataService.cs, MetaData/PrimaryKeyConstraintMetaData.cs,
	  MetaData/TriggerMetaData.cs, MetaData/DatabaseMetaData.cs,
	  MetaData/ForeignKeyConstraintMetaData.cs, MetaData/IndexMetaData.cs,
	  Codons/CapabilitiesCodon.cs, Codons/DbFactoryCodon.cs,
	  Codons/ActionCodon.cs, Codons/CapabilityFlagsCodon.cs, Capabilities,
	  Capabilities/UniqueConstraint.cs, Capabilities/CapabilitiesUtility.cs,
	  Capabilities/User.cs, Capabilities/Parameter.cs,
	  Capabilities/ConnectionSettings.cs, Capabilities/SchemaActions.cs,
	  Capabilities/CheckConstraint.cs, Capabilities/Table.cs,
	  Capabilities/Procedure.cs, Capabilities/Column.cs,
	  Capabilities/PrimaryKeyConstraint.cs, Capabilities/Trigger.cs,
	  Capabilities/ForeignKeyConstraint.cs, Capabilities/Index.cs,
	  Capabilities/View.cs, ConnectionContextService.cs, IDbFactory.cs,
	  QueryService.cs, AbstractDbFactory.cs,
	  MonoDevelop.Database.Sql.addin.xml, MonoDevelop.Database.Sql.mdp:
	  improved capabilities system

2007-08-28  Ben Motmans <ben.motmans@gmail.com> 
